# courseweb-cli

./: .gitignore  README.md  install.sh  pyproject.toml
.tmp_courseweb_sync/: courseweb_manage.py
courseweb-cli/: .gitignore  README.md  install.sh  pkucw  pkucw-cli  pyproject.toml
courseweb-cli/docs/: account-management.md  architecture.md  overview.md
courseweb-cli/scripts/: deploy-host.sh  deploy-mac-mini.sh  install-openclaw.sh  smoke-test.sh
courseweb-cli/skills/pkucw-cli/: SKILL.md
courseweb-cli/skills/pkucw-cli/agents/: openai.yaml
courseweb-cli/src/: pkucw.py
courseweb-cli/src/courseweb/: __init__.py  accounts.py  assignments.py  auth.py  cli.py  contents.py  courses.py  download_utils.py  models.py  output.py  recordings.py  state.py
courseweb-cli/src/courseweb_cli.egg-info/: PKG-INFO  requires.txt
docs/: overview.md  technical-report.md
scripts/: deploy-mac-mini.sh  deploy-remote.sh  smoke-test.sh
skills/pkucw-cli/agents/: openai.yaml
src/courseweb/: __init__.py  announcements.py  assignments.py  auth.py  cli.py  contents.py  courses.py  models.py  output.py  recordings.py  session_runtime.py  state.py
src/courseweb_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
