[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "courseweb-cli"
version = "0.2.0"
description = "Prototype CLI for PKU teaching-site workflows"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Codex" }
]
dependencies = [
  "playwright>=1.53,<2",
]

[project.scripts]
courseweb = "courseweb.cli:main"
cw = "courseweb.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
