[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "courseweb-cli"
version = "0.4.0b2"
description = "CLI for PKU course.pku.edu.cn workflows with agent-friendly JSON output"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Codex" }
]
dependencies = [
  "playwright>=1.53,<2",
]

[project.scripts]
pkucw = "courseweb.cli:main"
pkucw-cli = "courseweb.cli:main"
courseweb = "courseweb.cli:main"
cw = "courseweb.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
